--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Nirbhay's Portfolio</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="style.css">
     <link style="border-radius: 50%;" rel="icon" type="image/png" href="logo.png">
 
