redesgined main and about page

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link style="border-radius: 50%;" rel="icon" type="image/png" href="logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link style="border-radius: 50%;" rel="icon" type="image/png" href="assests/logo.png">
 </head>
 <body>
 
     <header class="header">
         <div class="logo-container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Logo" class="logo-img">
+                <img src="assests/logo.png" alt="Logo" class="logo-img">
                 <p id="name">STRANGE X STARK</p>
             </a>
         </div>
@@ -26,17 +27,31 @@
             </ul>
         </nav>
     </header>
+    
     <main>
         <section class="hero">
-            <h1 class="hero-title">Welcome to My World</h1>
-            <p class="hero-text">Hi, I'm Nirbhay aka Strangexstark, a tech lover and football player. My programming journey started with Python, and I’ve since explored web development and am now eager to learn C++. I’m passionate about IoT projects, working with platforms like Arduino and Raspberry Pi Pico. I’ve even built my own AI assistant, Jarvis. When I’m not coding, I’m cheering for Real Madrid and diving into the world of Iron Man and Marvel. I enjoy blending my love for technology and football to create unique and innovative projects.</p>
-            <div class="cta-wrapper">
-                <a href="projects.html" class="cta-button">Explore Projects</a>
+            <div class="hero-container">
+                <div class="image-container">
+                    <img src="assests/logo.jpg" alt="Logo" style="border-radius: 50%;" class="hero-image">
+                    
+                </div>
+                <div class="about-container">
+                    <h1 class="hero-title">Hi, I'm Nirbhay</h1>
+                    <p class="hero-text">I'm a 14-year-old student with a passion for technology. I go by the name <strong>STRANGEXSTARK</strong>, inspired by my admiration for Iron Man. I enjoy coding, playing football, chess, and creating projects using platforms like Raspberry Pi and Arduino. I’m passionate about blending the digital and physical worlds seamlessly.</p>
+                    <a href="projects.html" class="cta-button">Explore My Projects</a>
+                    <div class="social-links">
+                        <a href="https://github.com/lordstarkk" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="https://www.instagram.com/strangexstark_/" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/strangexstark" target="_blank" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://x.com/strangexstark" target="_blank" class="social-link"><i class="fab fa-twitter"></i></a> 
+                    </div>
+                </div>
             </div>
         </section>
     </main>
     <footer class="footer">
         <p>&copy; 2024 Nirbhay's Portfolio | All rights reserved</p>
     </footer>
+
 </body>
 </html>
