--- a/about.html
+++ b/about.html
@@ -6,14 +6,13 @@
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link style="border-radius: 50%;" rel="icon" type="image/png" href="logo.png">
-
+    <link style="border-radius: 50%;" rel="icon" type="image/png" href="assests/logo.png">
 </head>
 <body>
     <header class="header">
         <div class="logo-container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Logo" class="logo-img">
+                <img src="assests/logo.png" alt="Logo" class="logo-img">
                 <p id="name">STRANGE X STARK</p>
             </a>
         </div>
@@ -26,36 +25,79 @@
             </ul>
         </nav>
     </header>
+
     <main class="main-content">
         <section class="about-section">
-            <h2>About Me</h2>
-            <p>My programming journey began with Python, which I learned as my first language. Over time, I expanded my skills and delved into web development, where I picked up the knowledge to create dynamic websites and applications. Now, I’m eager to dive into C++ to broaden my understanding of programming even further. I’ve also developed a deep interest in IoT projects, particularly using Arduino and Raspberry Pi Pico. I enjoy creating innovative solutions that connect the digital and physical worlds.</p>
-            <p>On top of that, I am a huge fan of Iron Man and Marvel movies, which has inspired me to use the name "strangexstark." This name is a nod to Iron Man and represents my admiration for the character and the tech-oriented universe of Marvel. In fact, I’ve built my own AI system, Jarvis, to serve as an intelligent assistant, much like Tony Stark’s iconic AI. This project is a testament to my passion for technology and my desire to create something that merges both my tech interests and love for Marvel.
+            <div class="section-header">
+                <h2>About Me</h2>
+                <p class="section-description">A quick overview of who I am, my journey into programming, and what excites me.</p>
+            </div>
 
-            </p>
-            <p>
-                I'm also a football player, and my favorite team is Real Madrid. Football is something I'm really passionate about, and I enjoy playing the game whenever I can. Being part of a team has taught me a lot about collaboration, strategy, and working towards a common goal, which are also values that I try to apply in my programming and tech projects.
-            </p>
-            <p>
-                Throughout this journey, I’ve realized that programming is not just about writing code—it's about problem-solving and creating solutions that can have a tangible impact. With each new project, I learn more about the endless possibilities that technology offers, and I am excited to continue exploring new areas in software development, AI, and IoT.
-            </p>
+            <div class="about-details">
+                <div class="about-image">
+                    <img src="assests/logo.jpg" alt="Logo" class="about-image-img">
+                </div>
+                <div class="about-text">
+                    <p>My programming journey began with Python, which I learned as my first language. Over time, I expanded my skills and delved into web development, where I picked up the knowledge to create dynamic websites and applications. Now, I’m eager to dive into C++ to broaden my understanding of programming even further. I’ve also developed a deep interest in IoT projects, particularly using Arduino and Raspberry Pi Pico. I enjoy creating innovative solutions that connect the digital and physical worlds.</p>
+                    <p>On top of that, I am a huge fan of Iron Man and Marvel movies, which has inspired me to use the name "strangexstark." This name is a nod to Iron Man and represents my admiration for the character and the tech-oriented universe of Marvel. In fact, I’ve built my own AI system, Jarvis, to serve as an intelligent assistant, much like Tony Stark’s iconic AI. This project is a testament to my passion for technology and my desire to create something that merges both my tech interests and love for Marvel.</p>
+                    <p>I'm also a football player, and my favorite team is Real Madrid. Football is something I'm really passionate about, and I enjoy playing the game whenever I can. Being part of a team has taught me a lot about collaboration, strategy, and working towards a common goal, which are also values that I try to apply in my programming and tech projects.</p>
+                    <p>When I’m not coding or building tech projects, I’m on the football field. Football is a big part of my life, and playing the game has taught me a lot about teamwork, strategy, and perseverance—values I apply to both my programming and tech ventures.</p>
+                    <p>Throughout this journey, I’ve realized that programming is not just about writing code—it's about problem-solving and creating solutions that can have a tangible impact. With each new project, I learn more about the endless possibilities that technology offers, and I am excited to continue exploring new areas in software development, AI, and IoT.</p>
+                </div>
+
+            </div>
         </section>
+        <main>
+            <section class="skills-section">
+                <h3>My Skills</h3>
+                <div class="skill">
+                    <div class="skill-name">Python</div>
+                    <div class="skill-bar">
+                        <span class="python"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">C++</div>
+                    <div class="skill-bar">
+                        <span class="cpp"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">Iot Devices</div>
+                    <div class="skill-bar">
+                        <span class="arduino"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">HTML</div>
+                    <div class="skill-bar">
+                        <span class="html"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-name">CSS</div>
+                    <div class="skill-bar">
+                        <span class="css"></span>
+                    </div>
+                <div class="skill">
+                    <div class="skill-name">Java Script</div>
+                    <div class="skill-bar">
+                        <span class="js"></span>
+                    </div>
+                </div>
+            </section>
+        </main>
+        
     </main>
+
+
     <footer class="footer">
         <p>Social Media Handles</p>
         <div class="social-links">
-            <a href="https://x.com/strangexstark" target="_blank" class="social-link">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://github.com/lordstarkk" target="_blank" class="social-link">
-                <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.facebook.com/strangexstark" target="_blank" class="social-link">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/strangexstark_/" target="_blank" class="social-link">
-                <i class="fab fa-instagram"></i>
-            </a>
+            <a href="https://github.com/lordstarkk" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/strangexstark_/" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/strangexstark" target="_blank" class="social-link"><i class="fab fa-facebook"></i></a>
+            <a href="https://x.com/strangexstark" target="_blank" class="social-link"><i class="fab fa-twitter"></i></a> 
         </div>
         <p>&copy; 2024 Nirbhay's Portfolio | All rights reserved</p>
     </footer>
