--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
-    <link style="border-radius: 50%;" rel="icon" type="image/png" href="logo.png">
+    <link style="border-radius: 50%;" rel="icon" type="image/png" href="assests/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="logo-container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Logo" class="logo-img">
+                <img src="assests/logo.png" alt="Logo" class="logo-img">
                 <p id="name">STRANGE X STARK</p>
             </a>
         </div>
@@ -47,18 +47,10 @@
     <footer class="footer">
         <p>Social Media Handles</p>
         <div class="social-links">
-            <a href="https://x.com/strangexstark" target="_blank" class="social-link">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://github.com/lordstarkk" target="_blank" class="social-link">
-                <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.facebook.com/strangexstark" target="_blank" class="social-link">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/strangexstark_/" target="_blank" class="social-link">
-                <i class="fab fa-instagram"></i>
-            </a>
+            <a href="https://github.com/lordstarkk" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/strangexstark_/" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/strangexstark" target="_blank" class="social-link"><i class="fab fa-facebook"></i></a>
+            <a href="https://x.com/strangexstark" target="_blank" class="social-link"><i class="fab fa-twitter"></i></a> 
         </div>
 
         <p>&copy; 2024 Nirbhay's Portfolio | All rights reserved</p>
