Added new project FRAS

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,18 @@
                 <a  target="_blank" href="https://github.com/lordstarkk/JARIVIS-1.1-PYTHON-AI-ASSISTANT.git"> Git-Hub</a></b>
                 </p>
             </div>
-
+            <div class="project-card">
+                <a target="_blank" href="">
+                    <img src="/assests/FRAS.png" style="height: 25%;" alt=""> </a>
+                    <h3>Facial Recogniton Attendence System</h3>
+                    
+                    <p>The Facial Recognition Attendance System is a Python-based application that uses OpenCV and the face_recognition library to automate attendance tracking. It recognizes faces in real-time, logs attendance automatically, and provides an efficient, accurate, and user-friendly solution with minimal hardware—just a webcam. The system continuously monitors the environment for face detection, ensuring quick attendance marking. Ideal for classrooms, offices, or any setting requiring seamless attendance management, it eliminates manual input and streamlines the entire process
+                        <br>
+                        <b>Go to project :
+                        <a  target="_blank" href="https://github.com/lordstarkk/FacialRecognitionAttendanceSystem.git"> Git-Hub</a></b>
+                    </p>
+                    </div>
+            
             <div class="project-card">
                 <a target="_blank" href="https://lordstarkk.github.io/strangexstarkWeb">
                 <img src="assests/website.png" alt="Website png"></a>
@@ -62,9 +73,10 @@
                 </p>
             </div>
         </section>
+
     </main>
     <footer class="footer">
-        <p>&copy; 2024 Nirbhay's Portfolio | All rights reserved</p>
+        <p>&copy; 2025 Nirbhay's Portfolio | All rights reserved</p>
     </footer>
 </body>
 </html>
